<resources>
    <string name="app_name">Yummers</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">"Welcome !"</string>
    <string name="signIn">Sign In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signUp"><b>Sign up now!</b></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_acc"><b>Sign in to your account</b></string>
    <string name="sign_up">Sign Up</string>
    <string name="no_account">Dont\' have an account?</string>
    <string name="redirect">Sign Up!</string>
    <string name="register_a_business">Register your business today!</string>
    <string name="yummers">yummers!</string>
    <string name="register">Register</string>
    <string name="signout">Sign Out</string>
    <string name="business_name">Business Name</string>
    <string name="my_menu">My Menu</string>
    <string name="business_location">Business Location</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="current_orders">Current Orders</string>
    <string name="update_menu">Update Menu</string>
    <string name="textview">TextView</string>
    <string name="order_history">Order History</string>
    <string name="user_homepage"><b>You are signed in as a user, welcome!</b></string>
    <string name="business_homepage"><b>You are signed in as a business, welcome!</b></string>
    <string name="add_item"><b>Please enter an item to add to the menu</b></string>
    <string name="search">Search</string>
    <string name="order_status"><b>Order Status</b></string>
    <string name="view_menu">All Menus</string>
    <string name="recycler_view">recyclerView</string>
    <string name="all_business">All Restaurants</string>
    <string name="search_business">Search Restaurant</string>
    <string name="search_result"><b>Search Results</b></string>

</resources>