...
        android:layout_height="134dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        app:srcCompat="@drawable/food_pic" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
...
