...
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="pastOrders"
        android:text="@string/order_history" />


    <Button
        android:id="@+id/update_menu_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
...
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:onClick="viewMenu"
        android:text="@string/view_menu"/>

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
...
