...
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="Add item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/item_menu_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="81dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_marginBottom="63dp"
...
